--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Didot';
+  src: url('/fonts/Didot.woff2') format('woff2') url('/fonts/Didot.woff')
+    format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Switzer;
+  src: url('/fonts/Switzer-Regular.woff2') format('woff2')
+    url('/fonts/Switzer-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 /* Tokens */
 :root {
   --color-primary: 20 20 20; /* Text, buttons, etc. */
@@ -178,5 +194,12 @@ shop-pay-button {
     img {
       @apply aspect-[inherit] w-full object-cover;
     }
+  }
+
+  .headerIcon {
+    @apply w-[2rem] h-[2rem] fill-neutral-900;
+  }
+  .switzerLink {
+    @apply font-switzer uppercase text-[1rem] tracking-[-.04rem] text-neutral-900;
   }
 }
