--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -197,7 +197,7 @@ shop-pay-button {
   }
 
   .headerIcon {
-    @apply w-[2rem] h-[2rem] fill-neutral-900;
+    @apply w-[1.6rem] h-fit fill-neutral-900;
   }
   .switzerLink {
     @apply font-switzer uppercase text-[1rem] tracking-[-.04rem] text-neutral-900;
