Update iconHeaderMobile size in app.css

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -228,6 +228,6 @@ shop-pay-button {
   }
 
   .iconHeaderMobile {
-    @apply w-6 -rotate-90 h-fit fill-transparent;
+    @apply w-6 -rotate-90 h-10 fill-transparent;
   }
 }
