--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -165,10 +165,6 @@ shop-pay-button {
     }
   }
 
-  .absolute-center {
-    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
-  }
-
   .strike {
     position: relative;
     &::before {
@@ -197,9 +193,15 @@ shop-pay-button {
   }
 
   /* CUSTOM CLASS */
+
+  .absolute-center {
+    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
+  }
+
   .headerIcon {
     @apply w-[1.6rem] h-fit fill-neutral-900 stroke-neutral-900;
   }
+
   .switzerLink {
     @apply font-switzer uppercase text-[1rem] tracking-[-.04rem] text-neutral-900;
   }
@@ -224,10 +226,19 @@ shop-pay-button {
 
   .subHeaderLinkMobile {
     @apply text-[1.25rem] py-[.5rem] truncate tracking-tighter font-switzer uppercase text-neutral-900
-      relative flex justify-start items-baseline;
+      relative flex justify-start items-baseline
+      lg:py-0;
   }
 
   .iconHeaderMobile {
     @apply w-6 -rotate-90 h-10 fill-transparent;
+  }
+
+  .footerTitle {
+    @apply text-[1rem] font-switzer uppercase  text-neutral-900 tracking-tighter;
+  }
+
+  .footerLink {
+    @apply text-[1rem] font-switzer text-neutral-400 tracking-tighter;
   }
 }
